--- a/Markdown-to-Word-conversion/Convert-Markdown-to-Word/Console-App-.NET-Core/Convert-Markdown-to-Word/Convert-Markdown-to-Word.csproj
+++ b/Markdown-to-Word-conversion/Convert-Markdown-to-Word/Console-App-.NET-Core/Convert-Markdown-to-Word/Convert-Markdown-to-Word.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <RootNamespace>Convert_Markdown_to_Word</RootNamespace>
   </PropertyGroup>
 
