--- a/Word-to-Markdown-conversion/Save-images-as-separate-files/Console-App-.NET-Core/Save-images-as-separate-files/Save-images-as-separate-files.csproj
+++ b/Word-to-Markdown-conversion/Save-images-as-separate-files/Console-App-.NET-Core/Save-images-as-separate-files/Save-images-as-separate-files.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <RootNamespace>Save_images_as_separate_files</RootNamespace>
   </PropertyGroup>
 
